hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
    name: hello
  namespace: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      name: hello
  template:
    metadata:
      labels:
        app: hello
        name: hello
    spec:
      containers:
      - name: hello
        image: quay.io/harpasin/do480-hello-nginx:v1.0
---
