hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
    name: hello
  name: hello
  namespace: hello-app
spec:
  ports:
  - port: 8080
  selector:
    name: hello
---
