hello/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-app
  labels:
    app: hello
    name: hello
  namespace: hello-app  
spec:
  # Replace the entry with the value of your wildcard domain.
  host: hello.apps.ocp4-mng.example.com
  subdomain: ''
  to:
    kind: Service
    name: hello
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
